# k3sgen

./: Cargo.toml
src/: lib.rs  main.rs
src/parse/: model.rs
